# lobster

./: .dxtignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  README.md  dev.ipynb  env.yml  hatch_build.py  index.html  last.ckpt  manifest.json  notebook.ipynb  pyproject.toml  pytest.ini  requirements-dev.in  requirements-mgm.in  requirements.in  requirements.txt
.claude/agents/: code-reviewer.md  test-suite-architect.md
.cursor/rules/: linting.mdc  test-driven-dev.mdc  uv-run-rule.mdc
.github/: pull_request_template.md
.github/workflows/: build-dxt.yml  ci.yml  publish-pypi.yml  push.yml  push_main.yml  tag.yml
ATOMICA/: dev.ipynb
data/0c57441b132b458b45160a306ca82943/1757974476.9717226/: index.json
docs/: CONTRIBUTING.md  CONTRIBUTORS.md  DXT_DISTRIBUTION.md  MCP_INTEGRATION.md  RL_TRAINING.md  UME.md  UME_GRPO_LOGGING.md
docs/diagrams/: create_ume_architecture_diagram.py  ume_architecture_diagram.html
docs/source/: conf.py
examples/: compare_contrastive_loss.py  compare_flash_attention_embeddings.py  example_checkpoint_compatibility.py  example_embed_fa2.py  example_hf_inference.py  example_sdpa_unpadded_attention_mask.py  fit_biopython_scalers.py  generate_forward_folding.yaml  generate_inverse_folding.yaml  generate_synthetic_dataset.py  generate_unconditional.yaml  inference.py  intervene.py  onnx_example.py  perturbation_analysis_example.py  perturbation_score_example.py  test_sdpa_unpadded_attention_mask.py  train_ume_dummy.py  train_ume_grpo.py  ume_hf_example.py  ume_hf_sanity_check.py  ume_transformers_example.py
examples/ume/: dummy_training.py
examples/ume-transformers/: README.md  convert_to_hf_weights.py  create_demo_weights.py  test_ume_hf.py  upload_to_hub.py
examples/ume-transformers/model/: README.md  config.json  special_tokens_map.json  tokenization_ume.py  tokenizer_config.json
examples/ume/data/: index.json
model_testing/: inference.py  intervene.py
notebooks/: 01-inference.ipynb  01-lobster-fold.ipynb  02-3d-lobster.ipynb  02-intervention.ipynb  03-architecture-analyzer.ipynb  03-gemini.ipynb  04-lobster-llama-encoder.ipynb  04-ume-multimodal-embeddings.ipynb  05-calm-debug.ipynb  05-graft-and-score-humanization.ipynb  check_validation.ipynb  debug.ipynb  make_smiles_tokenizer2.ipynb  try_inference_clm.ipynb  try_load_dataset.ipynb  try_load_dataset.py
notebooks/.ipynb_checkpoints/: 03-gemini-checkpoint.ipynb  04-lobster-llama-encoder-checkpoint.ipynb  05-graft-and-score-humanization-checkpoint.ipynb
prhot/scripts/: save_token_losses.py  save_token_losses.slrm
qm9_pair_gen/: README.md  distances.py  oldpyproject  pyproject.toml  qm9_dataset_example.py  qm9_parquet_generation.py  requirements.txt  utils_qm9.py
qm9_pair_gen/config/: production.yaml  test.yaml
qm9_pair_gen/notebooks/: check_out_molecule_net.ipynb  check_parquet_file.ipynb  check_regression_vals.ipynb  check_validation.ipynb  test_atomic_datasets_pr.ipynb
qm9_pair_gen/scripts/: gen_pairs_script.sh  test_run.sh
qm9_pair_gen/src/qm9_pair_gen/: __init__.py  config.yaml  example_shape_filtering.py  generate_pairs.py  monitor_pairs.py  pair_generation_src.py  setup.py  utils_mol.py
scripts/: check_claude_md.py
share/lobster/: .identifying_file_42688fa5f3a65e2caa822dec544d5694
slurm/: README.md  train.sh
slurm/logs/train/: what am i training.txt
slurm/scripts/: eval_dgeb_mock_baseline.sh  eval_dgeb_ume.sh  eval_ume.sh  evaluate_ume.sh  example_ume_reward.sh  process_data.sh  test_fa2_ume.sh  train_gen_ume.sh  train_neobert.sh  train_ume-2.sh  train_ume.sh  train_ume2.sh  train_ume_trl.sh
src/lobster/: __init__.py  _imports.py  dependencies.py
src/lobster/affinity_experiments/: create_r10_ds.py  main.py
src/lobster/assets/: ab_vocab.txt  protein_vocab.txt
src/lobster/callbacks/: README.md  __init__.py  _auxiliary_task_loss_weight_scheduler.py  _calm_linear_probe_callback.py  _calm_sklearn_probe_callback.py  _dataloader_checkpoint_callback.py  _dgeb_evaluation_callback.py  _folding_structure_utils.py  _inverse_folding_callback.py  _linear_probe_callback.py  _molecule_validation_callback.py  _moleculeace_linear_probe.py  _moleculeace_linear_probe_callback.py  _moleculeace_linear_probe_callback_fixed.py  _moleculeace_sklearn_probe_callback.py  _peer_eval_callback.py  _peer_evaluation_callback.py  _peer_sklearn_probe_callback.py  _peer_utils.py  _perturbation_analysis_callback.py  _perturbation_score_callback.py  _random_neighbor_score.py  _random_neighbor_score_callback.py  _simplified_peer_evaluation_callback.py  _sklearn_probe_callback.py  _structure_decode.py  _throughput_fn.py  _tokens_per_second.py  _tokens_per_second_callback.py  _umap_visualization_callback.py  _ume_grpo_logging_callback.py  _unconditional_generation.py
src/lobster/cmdline/: __init__.py  _architecture_analyzer.py  _embed.py  _eval_harness_embed.py  _intervene.py  _intervene_multiproperty.py  _perplexity.py  _predict.py  _train.py  _utils.py  dgeb_eval.py  embed.py  eval_embed.py  eval_ume.py  evaluate.py  finetune.py  generate.py  intervene_multiproperty.py  manage_ume_checkpoints.py  perplexity.py  predict.py  train.py  utils.py
src/lobster/concepts/: __init__.py  _large_molecule_descriptors.py  _utils.py
src/lobster/constants/: __init__.py  _aho.py  _alphafold2.py  _amino_acids.py  _architecture_analyzer.py  _biopython_features.py  _calm_tasks.py  _codon_table.py  _descriptor_descs.py  _hf.py  _modality.py  _moleculeace_tasks.py  _peer_tasks.py  _pooling.py  _rdkit_descriptor_distributions.py  _s3.py  _scheduler_type.py  (+5 more)
test_data/parquet/: data.parquet
test_data/pdbs/: 1a2oA01  1ae2A00
tests/: test_ume_dgeb.py
tests/lobster/: conftest.py  test__imports.py
tests/prescient_plm/: conftest.py
token_selection/: README.md
token_selection/scripts/: inference.py  save_token_losses.py  save_token_losses.slrm
wandb_sweeps/: wandb_generate.py  wandb_slurm.sh  wandb_sweep_config.yaml
web/: .prettierrc  Dockerfile  package-lock.json  package.json  svelte.config.js  vite.config.ts
workflows/: ci.yml  docs-pages.yml
(+1132 files in other folders)
